--- a/aging_together/pubspec.yaml
+++ b/aging_together/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated_splash_screen: 
   page_transition: 
-
+  unicons: ^2.1.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
